// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > renders condensed layout 1`] = `
<div>
  <div
    class="prc-PageLayout-module-PageLayoutRoot-ymIwqW"
    data-component="PageLayout"
    style="--spacing: var(--spacing-condensed);"
  >
    <div
      class="prc-PageLayout-module-PageLayoutWrapper-ymIwqW"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-module-Header-ymIwqW"
        data-component="PageLayout.Header"
        data-hidden="false"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="prc-PageLayout-module-HeaderContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-HeaderHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
      </header>
      <div
        class="prc-PageLayout-module-PageLayoutContent-ymIwqW"
      >
        <main
          class="prc-PageLayout-module-ContentWrapper-ymIwqW"
          data-component="PageLayout.Content"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-module-Content-ymIwqW"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-module-PaneWrapper-ymIwqW"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-condensed); --spacing-column: var(--spacing-condensed);"
        >
          <div
            class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-PaneHorizontalDivider-ymIwqW"
            data-component="PageLayout.HorizontalDivider"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
          />
          <div
            class="prc-PageLayout-module-Pane-ymIwqW"
            data-component="PageLayout.Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-module-VerticalDivider-ymIwqW prc-PageLayout-module-PaneVerticalDivider-ymIwqW"
            data-component="PageLayout.VerticalDivider"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-condensed);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-module-FooterWrapper-ymIwqW"
        data-component="PageLayout.Footer"
        data-hidden="false"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-FooterHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
        <div
          class="prc-PageLayout-module-FooterContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders default layout 1`] = `
<div>
  <div
    class="prc-PageLayout-module-PageLayoutRoot-ymIwqW"
    data-component="PageLayout"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-module-PageLayoutWrapper-ymIwqW"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-module-Header-ymIwqW"
        data-component="PageLayout.Header"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HeaderContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-HeaderHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-module-PageLayoutContent-ymIwqW"
      >
        <main
          class="prc-PageLayout-module-ContentWrapper-ymIwqW"
          data-component="PageLayout.Content"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-module-Content-ymIwqW"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-module-PaneWrapper-ymIwqW"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-PaneHorizontalDivider-ymIwqW"
            data-component="PageLayout.HorizontalDivider"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-module-Pane-ymIwqW"
            data-component="PageLayout.Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-module-VerticalDivider-ymIwqW prc-PageLayout-module-PaneVerticalDivider-ymIwqW"
            data-component="PageLayout.VerticalDivider"
            data-position="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-module-FooterWrapper-ymIwqW"
        data-component="PageLayout.Footer"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-FooterHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-module-FooterContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders pane in different position when narrow 1`] = `
<div>
  <div
    class="prc-PageLayout-module-PageLayoutRoot-ymIwqW"
    data-component="PageLayout"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-module-PageLayoutWrapper-ymIwqW"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-module-Header-ymIwqW"
        data-component="PageLayout.Header"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HeaderContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-HeaderHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-module-PageLayoutContent-ymIwqW"
      >
        <main
          class="prc-PageLayout-module-ContentWrapper-ymIwqW"
          data-component="PageLayout.Content"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-module-Content-ymIwqW"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-module-PaneWrapper-ymIwqW"
          data-is-hidden="false"
          data-position-narrow="start"
          data-position-regular="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-PaneHorizontalDivider-ymIwqW"
            data-component="PageLayout.HorizontalDivider"
            data-position-narrow="start"
            data-position-regular="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-module-Pane-ymIwqW"
            data-component="PageLayout.Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-module-VerticalDivider-ymIwqW prc-PageLayout-module-PaneVerticalDivider-ymIwqW"
            data-component="PageLayout.VerticalDivider"
            data-position-narrow="start"
            data-position-regular="end"
            data-variant-narrow="none"
            data-variant-regular="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-module-FooterWrapper-ymIwqW"
        data-component="PageLayout.Footer"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-FooterHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-module-FooterContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout > renders with dividers 1`] = `
<div>
  <div
    class="prc-PageLayout-module-PageLayoutRoot-ymIwqW"
    data-component="PageLayout"
    style="--spacing: var(--spacing-normal);"
  >
    <div
      class="prc-PageLayout-module-PageLayoutWrapper-ymIwqW"
      data-width="xlarge"
    >
      <header
        class="prc-PageLayout-module-Header-ymIwqW"
        data-component="PageLayout.Header"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HeaderContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-HeaderHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant-narrow="filled"
          data-variant-regular="line"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="prc-PageLayout-module-PageLayoutContent-ymIwqW"
      >
        <main
          class="prc-PageLayout-module-ContentWrapper-ymIwqW"
          data-component="PageLayout.Content"
          data-is-hidden="false"
        >
          <div
            class="prc-PageLayout-module-Content-ymIwqW"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
        </main>
        <div
          class="prc-PageLayout-module-PaneWrapper-ymIwqW"
          data-is-hidden="false"
          data-position="start"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-PaneHorizontalDivider-ymIwqW"
            data-component="PageLayout.HorizontalDivider"
            data-position="start"
            data-variant-narrow="filled"
            data-variant-regular="line"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="prc-PageLayout-module-Pane-ymIwqW"
            data-component="PageLayout.Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="prc-PageLayout-module-VerticalDivider-ymIwqW prc-PageLayout-module-PaneVerticalDivider-ymIwqW"
            data-component="PageLayout.VerticalDivider"
            data-position="start"
            data-variant-narrow="none"
            data-variant-regular="line"
            data-variant-wide="line"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="prc-PageLayout-module-FooterWrapper-ymIwqW"
        data-component="PageLayout.Footer"
        data-hidden="false"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="prc-PageLayout-module-HorizontalDivider-ymIwqW prc-PageLayout-module-FooterHorizontalDivider-ymIwqW"
          data-component="PageLayout.HorizontalDivider"
          data-variant-narrow="line"
          data-variant-regular="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="prc-PageLayout-module-FooterContent-ymIwqW"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;
